# Assignment-Crew-AI

./: README.md
plants_researcher/: README.md  blog.md  pyproject.toml
plants_researcher/output/: blog.md  blog_post.md  report.md
plants_researcher/src/plants_researcher/: crew.py  main.py
plants_researcher/src/plants_researcher/config/: agents.yaml  tasks.yaml
