[project]
name = "plants_researcher"
version = "0.1.0"
description = "Plants_Researcher using crewAI"
authors = [{ name = "Devesh Singh", email = "devehnegi10nov@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
plants_researcher = "plants_researcher.main:run"
run_crew = "plants_researcher.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
